AUTOMAKE_OPTIONS = foreign

SUBDIRS = libjpeg libortp libsqlite libx264 src 

confdir = $(prefix)/config
conf_DATA = doc/config/client.cfg  \
            doc/config/server.cfg  \
            doc/config/opendmd.cfg \
            doc/config/webserver.cfg

docdir = $(prefix)/doc
doc_DATA = doc/dev/4.tech_review.txt

EXTRA_DIST = tools doc LICENSE README.md

